Technical Skills Section

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+body {
+  font-size: 14px;
+  color: #333;
+  background-color: #fff;
+  letter-spacing: 1px;
+}
+
 .overlay {
   width: 100%;
   height: 100%;
@@ -59,4 +66,39 @@
 
 .aboutImage {
   max-width: 100%;
+}
+
+.skillsSection {
+    background-color: #e74c3c;
+    color: #fff;
+}
+
+.skill {
+  text-align: center;
+  margin-left: 20px;
+}
+
+.chart {
+    position: relative;
+    width: 152px;
+    height: 152px;
+    display: inline-block;
+    text-align: center;
+}
+
+.chart canvas {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.chart .percent {
+  color: #000;
+  line-height: 152px;
+  display: inline-block;
+  font-size: 35px;
+}
+
+.chart .percent:after {
+    content: '%';
 }
