--- a/css/style.css
+++ b/css/style.css
@@ -309,3 +309,13 @@ body {
 .items {
   padding: 0;
 }
+
+.copyrightSection {
+  background-color: #000;
+  color: #fff;
+  padding: 30px 5px;
+}
+
+.copyrightSection p {
+  margin: 0;
+}
